<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
   <name>sound_play</name>
   <version>0.4.0</version>
   <description>
      sound_play provides a ROS node that translates commands on a ROS topic (<tt>robotsound</tt>) into sounds. The node supports built-in sounds, playing OGG/WAV files, and doing speech synthesis via festival. C++ and Python bindings allow this node to be used without understanding the details of the message format, allowing faster development and resilience to message format changes.
   </description>
   <maintainer email="namniart@gmail.com">Austin Hendrix</maintainer>
   <maintainer email="shingogo.5511@gmail.com">Shingo Kitagawa</maintainer>
   <author>Blaise Gassend</author>
   <license>BSD</license>
   <url type="website">http://ros.org/wiki/sound_play</url>
   <url type="repository">https://github.com/ros-drivers/audio_common</url>
   <url type="bugtracker">https://github.com/ros-drivers/audio_common/issues</url>

   <buildtool_depend>ament_cmake</buildtool_depend>
   <buildtool_depend>ament_cmake_python</buildtool_depend>
   <buildtool_depend>python3-setuptools</buildtool_depend>

   <build_depend>boost</build_depend>
   <build_depend>sound_play_msgs</build_depend>

   <exec_depend>action_msgs</exec_depend>
   <exec_depend>ament_index_python</exec_depend>
   <exec_depend>festival</exec_depend>
   <exec_depend>launch_xml</exec_depend>
   <exec_depend>rclpy</exec_depend>
   <exec_depend>sound_play_msgs</exec_depend>

   <exec_depend>gstreamer1.0</exec_depend>
   <exec_depend>gstreamer1.0-alsa</exec_depend>
   <exec_depend>gstreamer1.0-plugins-base</exec_depend>
   <exec_depend>gstreamer1.0-plugins-ugly</exec_depend>
   <exec_depend>gstreamer1.0-plugins-good</exec_depend>
   <exec_depend>python3-gi</exec_depend>

   <export>
      <build_type>ament_cmake</build_type>
   </export>
</package>
